test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/scalar_initializer_for_static_array.plx
#  You can't initialize a static array with a scalar expression.
pub arr: [3]f64 = 1.0

pub fn main(none) i32 {
    return 0
}
